@@ -27,6 +27,8 @@ Version 1.0.xxx (July xxth 2013)
 - Implemented: Razberry (Z-Wave), thermostat/light/temp/hum battery status
 - Implemented: Graph tooltips day of week translation
 - Fixed: Temperature graphs legend translation
+- Fixed: 'No Update Available !' translation
+
 
 Version 1.0.762 (July 1th 2013)
 - Changed: Motion Sensors, Off delay now sends 'Off' to Lighting 1/6 devices, and 'No Motion' to X10 motion sensors
